--- a/app/templates/pages/contacts.pug
+++ b/app/templates/pages/contacts.pug
@@ -4,7 +4,6 @@ extends ../layouts/default.pug
 include ../modules/footer.pug
 include ../modules/header.pug
 
-include ../modules/subscription.pug
 include ../modules/forms.pug
 
 block variables
@@ -64,5 +63,5 @@ block content
             data-name="1")
 
   +contactUsForm().bg-additional
-  +subscription().bg-additional
+  +subscriptionForm().bg-additional
   +footer().bg-additional
