--- a/app/templates/pages/news_detail.pug
+++ b/app/templates/pages/news_detail.pug
@@ -1,6 +1,6 @@
 extends ../layouts/default.pug
 
-include ../modules/subscription.pug
+include ../modules/forms.pug
 include ../modules/footer.pug
 include ../modules/header.pug
 
@@ -61,5 +61,5 @@ block content
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
 
 
-  +subscription().bg-white
+  +subscriptionForm().bg-white
   +footer().bg-white
