--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -1,6 +1,6 @@
 extends ../layouts/default.pug
 
-include ../modules/subscription.pug
+include ../modules/forms.pug
 include ../modules/footer.pug
 include ../modules/header.pug
 
@@ -80,5 +80,5 @@ block content
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-  +subscription().bg-additional
+  +subscriptionForm().bg-additional
   +footer().bg-additional
