--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -6,7 +6,6 @@ include ../modules/footer.pug
 include ../modules/header.pug
 include ../modules/about.pug
 
-include ../modules/subscription.pug
 include ../modules/forms.pug
 
 block variables
@@ -54,5 +53,5 @@ block content
               +icon('pack', 'svg')(class="pack")
     +askQuestionForm().bg-additional
     +about().bg-additional
-    +subscription().bg-additional
+    +subscriptionForm().bg-additional
     +footer().bg-additional
