--- a/app/scss/components/forms/defaultForm.scss
+++ b/app/scss/components/forms/defaultForm.scss
@@ -40,4 +40,17 @@
       }
     }
   }
+  &-content{
+    position: relative;
+    width: 100%;
+  }
+  &-success{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
