--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -1,6 +1,6 @@
 extends ../layouts/default.pug
 
-include ../modules/subscription.pug
+include ../modules/forms.pug
 include ../modules/footer.pug
 include ../modules/header.pug
 include ../modules/recepts.pug
@@ -97,5 +97,5 @@ block content
             +icon('recept-product-print', 'svg')
   +recepts().bg-white
   +wherebuy().bg-white.receptbuy
-  +subscription().bg-white
+  +subscriptionForm().bg-white
   +footer().bg-white
