--- a/app/templates/mixins/ui.pug
+++ b/app/templates/mixins/ui.pug
@@ -1,10 +1,16 @@
-mixin field(type_param, id_param, placeholder_param, label_text, label_addon)
+mixin inputFiled(type_param, id_param, label, binding = true)
   .main-field
-    input(type=type_param name=id_param id=id_param placeholder=placeholder_param)
-    if(label_addon != '')
-      label(for=id_param class="main-field-addon") #{label_addon}
-
+    if(binding == true)
+      input(type=type_param name=id_param id=id_param placeholder=label required)
+    else
+      input(type=type_param name=id_param id=id_param placeholder=label)
+      if(binding)
+        label(for=id_param class="main-field-addon") #{binding}
+      else if (binding != false)
+        label(for=id_param class="main-field-addon") Необязательно
     .main-field-error Поле заполнено неверно
+
+    //- inputFiled({тип поля ввода}, {имя поля}, {заголовок}, {обязательное ли поле (можно передать "null" или слово которое нужно вывести вместо "Необязательно","false" - не выводит слово)})
 
 mixin textarea(id_param, cols_param, rows_param, label_text, label_addon)
   .main-field
