--- a/app/templates/pages/contacts.pug
+++ b/app/templates/pages/contacts.pug
@@ -62,6 +62,6 @@ block content
             data-cords="61.283240311585,31.132082116528",
             data-name="1")
 
-  +contactUsForm().bg-additional
-  +subscriptionForm().bg-additional
-  +footer().bg-additional
+  +contactUsForm()
+  +subscriptionForm()
+  +footer()
