--- a/app/templates/pages/contacts.pug
+++ b/app/templates/pages/contacts.pug
@@ -7,7 +7,7 @@ include ../modules/header.pug
 include ../modules/forms.pug
 
 block variables
-  -var pageTitle='Список новостей'
+  -var pageTitle='Контакты'
 
   mixin contacts-phones-list(json)
     each data in json
