[UPDATE/NEW] работа с страницей 'о нас', обновление папки docs

--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -15,6 +15,7 @@
 @import "forms/defaultForm";
 
 @import "partners/main";
+@import "partners/about";
 
 @import "recepts/list";
 @import "recepts/detail";
