[UPDATE/FIX] Обновление gulpfile для работы с подпапками / исправление deploy

--- a/app/templates/pages/whereBuy.pug
+++ b/app/templates/pages/whereBuy.pug
@@ -41,28 +41,28 @@ block content
       h1.page-title Интернет-магазины
       .shops-list
         .shops-item
-          img(src='images/image-shops-1.png')
+          img(src='./images/wherebuy/image-shops-1.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-2.png')
+          img(src='./images/wherebuy/image-shops-2.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-3.png')
+          img(src='./images/wherebuy/image-shops-3.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-4.png')
+          img(src='./images/wherebuy/image-shops-4.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-5.png')
+          img(src='./images/wherebuy/image-shops-5.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-6.png')
+          img(src='./images/wherebuy/image-shops-6.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-7.png')
+          img(src='./images/wherebuy/image-shops-7.png')
           +icon('str-right-light-color','svg')
         .shops-item
-          img(src='images/image-shops-8.png')
+          img(src='./images/wherebuy/image-shops-8.png')
           +icon('str-right-light-color','svg')
 
   +subscriptionForm()
